vcs/specs/parser/fail/expressions/invalid_comprehension_filter.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, comprehension, filter, error
// @description: Comprehension with if clause missing condition
// @expected-error: E018

fn test() {
    let x = [x for x in items if];  // Missing condition after if
}
